{
  "version": 4,
  "terraform_version": "1.3.7",
  "serial": 45,
  "lineage": "fcee896d-f81c-48eb-a6b6-9b08857d7efa",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00149760ce42c967b",
            "arn": "arn:aws:ec2:us-east-2:335809563306:instance/i-01acb696545e0faec",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-01acb696545e0faec",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "Astr-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-028bd6d15c2898ade",
            "private_dns": "ip-10-36-11-175.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.36.11.175",
            "public_dns": "ec2-13-58-239-39.us-east-2.compute.amazonaws.com",
            "public_ip": "13.58.239.39",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0e054d1b6bbf22f57",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0b3ed193f32c5625e"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-058dde08941525ee5",
            "tags": {
              "Name": "Bastion_Instance_DOS-11_practice"
            },
            "tags_all": {
              "Environment": "project-x",
              "Name": "Bastion_Instance_DOS-11_practice",
              "Project": "Lesson_44_Practice",
              "terraform": "true"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0b3ed193f32c5625e"
            ]
          },
          "dependencies": [
            "aws_security_group.ssh_access_SecGroup",
            "data.aws_ami.latest_ubuntu",
            "data.aws_key_pair.selected",
            "data.terraform_remote_state.network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ssh_access_SecGroup",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:335809563306:security-group/sg-0b3ed193f32c5625e",
            "description": "open access to 22 port",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b3ed193f32c5625e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_ssh_common",
            "name_prefix": "",
            "owner_id": "335809563306",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "SSH_access"
            },
            "tags_all": {
              "Environment": "project-x",
              "Name": "SSH_access",
              "Project": "Lesson_44_Practice",
              "terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f5259b11a88615cf"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.terraform_remote_state.network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ssh_bastion_SecGroup",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:335809563306:security-group/sg-09d4f198103cc29fd",
            "description": "open access from bastion",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09d4f198103cc29fd",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0b3ed193f32c5625e"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_ssh_from_bastion",
            "name_prefix": "",
            "owner_id": "335809563306",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "SSH_bastion_access"
            },
            "tags_all": {
              "Environment": "project-x",
              "Name": "SSH_bastion_access",
              "Project": "Lesson_44_Practice",
              "terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f5259b11a88615cf"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.ssh_access_SecGroup",
            "data.terraform_remote_state.network"
          ]
        }
      ]
    }
  ]
}